lib/tests/fixtures/compiler/evaluation/func_deep_stack.baseline
Error: func_deep_stack.pp:3:9: node 'test': evaluation failed: done
  fail done
  ^~~~
  backtrace:
    in 'fail' (no source)
    in 'foo' at func_deep_stack.pp:3
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    in 'foo' at func_deep_stack.pp:5
    and 2 more frames
